Manual chapter 2 of 9

--- a/manual/h_level.html
+++ b/manual/h_level.html
@@ -109,7 +109,22 @@
         <H1>Leveling terrain</H1>
     </DIV> 
     <DIV id="main">    
-     <P>
-     </P>
+    <H2>Level terrain mode</H2>
+    <P>
+    The Level terrain mode works a bit differently when compared with Raise and Lower mods. As the name suggests it allows to paint flat surfaces. 
+    </P>
+    <P>
+    You can turn the Level   terrain mode by clicking the icon in the bottom left corner of the window (showing two arrows pointing to a horizontal line).
+    </P>
+    <P>
+    You can control the brushes in this mode as described in the previous section:<BR>
+    W and S to  change strength<BR>
+    A and D to change size<BR>
+    Q and E to change rotation<BR>
+    To paint elevation just hold the left mouse button
+    </P>
+    <P>
+    The brush strength controls the absolute  level (height) of the painted surface.  It is advised to use a simple brush shape (circle) with this mode if one wants a truly flat surface. 
+    </P>
     </DIV>
 </BODY>
