--- a/manual/h_brush.html
+++ b/manual/h_brush.html
@@ -109,7 +109,49 @@
         <H1>Heightmap brush</H1>
     </DIV> 
     <DIV id="main">    
-     <P>
-     </P>
+        <H2>Heightmap</H2>
+        <DIV class="img">
+        <IMG src="img/heightmap.png"> 
+        <H4>A heightmap produced with the editor</H4>
+    </DIV>
+        <P>
+            A height map is an 2D grayscale image where the color of every pixel is correlated to the height of a point on the 3D map. The Koparka editor allows to edit a height map in real time and show how a terrain rendered with that map will look. Even though a user is actually drawing a 2d image, that virtual 2d canvas  is never shown – only how it looks applied to a 3D mesh. 
+        </P>        
+        
+        <H2>The Brush</H2>  
+        <DIV class="img">
+            <IMG src="img/screen0_small.png">             
+        </DIV>
+        <P>
+            The features drawn on the terrain are controlled with a brush. You can change the position, shape, size, rotation and strength of the brush. Holding the left mouse button will start drawing the selected feature on the terrain. 
+        </P>
+        <P>
+            The position of the brush is controlled with the mouse and displayed as a vertical line with two triangle arrows (blue and red) at one end (called the 3D cursor). The brush is automatically moved to where the mouse cursor points, but not to a point on the terrain mesh but on the grid plane. 
+        </P>
+        <P>
+            The shape of the brush can be selected by clicking on any of the brush shape buttons located at the  top of the window. The currently selected brush is highlighted green.
+        </P>
+        <P>
+            The size of the brush can be changed with A (smaller) and D (larger) keys. Holding down the A key will make the brush smaller, holding the D key will make it larger. At all times the current size of the brush is displayed as a numerical value in the bottom left corner of the window.
+        </P>
+        <P>
+            The size of the brush can also be changed, by clicking on the config button, entering a value in the Brush Scale field and clicking the OK button. 
+        </P>
+        <P>
+            The rotation of the brush can be changed using the Q and E buttons. Holding the Q button will rotate the brush anti-clockwise, and holding the E button will rotate it clockwise. At all times the rotation of the brush is displayed as a numerical value on the third icon in the bottom left corner of the window.
+        </P>
+        <P>
+            Just as the size, the rotation can be changed in the configuration dialog. The field labeled Heading is responsible for the brush rotation.
+        </P>
+        <P>
+            The strength of the brush can be controlled with W and S keys. Holding down the W key will increase the rush strength holding down the S key will decrease it. The strength of the brush is actually it’s transparency, where 0.0 is total transparent and 1.0 is opaque. Using the Raise and Lower paint modes the strength controls how fast the feature is applied, using the Level mode it sets the desired level (height). At all times the current strength of the brush is displayed as a numerical value on the second icon in the bottom left corner of the window.
+        </P>
+        <P>
+            Like other brush setting it can also be set using the configuration dialog. 
+        </P>  
+        <DIV class="img">
+            <IMG src="img/screen6_small.png">             
+            <H4>Configuration dialog</H4>
+        </DIV>        
     </DIV>
 </BODY>
