--- a/manual/h_lower.html
+++ b/manual/h_lower.html
@@ -109,7 +109,22 @@
         <H1>Lowering terrain</H1>
     </DIV> 
     <DIV id="main">    
-     <P>
+    <H2>Lower terrain mode</H2>
+    <P>  
+    The lower  terrain mode allows to paint valleys, canyons, depressions – in other words paint elevation, but only down.
+    </P>
+    <P>
+    You can turn the Lower  terrain mode by clicking the down arrow icon in the bottom left corner of the window (second from the right).
+    </P>     
+    <P>
+    You can control the brushes in this mode as described in the previous section:<BR>
+    W and S to  change strength<BR>
+    A and D to change size<BR>
+    Q and E to change rotation<BR>
+    To paint elevation just hold the left mouse button 
+    </P>     
+    <P>
+    The brush strength controls how fast a cavity will grow when you hold down the left mouse button. With values close to 1.0 you will have very little control over the elevation on the other side values near 0.01 can produce artifacts (sharp transitions). 
      </P>
     </DIV>
 </BODY>
