--- a/manual/h_raise.html
+++ b/manual/h_raise.html
@@ -109,7 +109,22 @@
         <H1>Raising terrain</H1>
     </DIV> 
     <DIV id="main">    
-     <P>
+    <H2>Raise terrain mode</H2>
+    <P>     
+    The raise terrain mode allows to paint hills, mounds and mountains – in other words paint elevation, but only up. This is the default paint mode when switching to paint heightmap mode and also the default mode when the editor is first started. 
+    </P>
+    <P>
+    You can turn the Raise terrain mode by clicking the up arrow icon in the bottom left corner of the window (third from the right).
+    </P>     
+    <P>
+    You can control the brushes in this mode as described in the previous section:<BR>
+    W and S to  change strength<BR>
+    A and D to change size<BR>
+    Q and E to change rotation<BR>
+    To paint elevation just hold the left mouse button 
+    </P>     
+    <P>
+    The brush strength controls how fast a hill will grow when you hold down the left mouse button. With values close to 1.0 you will have very little control over the elevation on the other side values near 0.01 can produce artifacts (sharp transitions). 
      </P>
     </DIV>
 </BODY>
