Manual chapter 4 of 9

--- a/manual/g_brush.html
+++ b/manual/g_brush.html
@@ -108,8 +108,44 @@
          <A href="g_change.html" class="right">NEXT -&gt;&gt;</A>        
         <H1>Grass paining brush</H1>
     </DIV> 
-    <DIV id="main">    
-     <P>
-     </P>
+    <DIV id="main">  
+        <DIV class="img">
+            <IMG src="img/screen2_small.png"> 
+        </DIV>
+        <H4>Grass paint mode</H4>    
+    <P>
+    Just like terrain features (height) and textures, grass is drawn using brushes. The shape, size and strength of the brush can be controlled in the same way as in Heighmap or Texture paint mode.
+    </P>
+    <P>
+    To paint grass on the terrain just hold down the left mouse button (you may need to select a grass texture first by clicking on one of the grass images on the right side of the window). Painting is done in a airbrush fashion – you hold down the left mouse button and move the pointer around.
+    </P>
+    <P>
+    You can remove grass by clicking on the big red X - this changes the brush to a eraser, you can now remove patches of grass in the same way you would paint them – hold down the left mouse button and move the cursor.
+    </P>
+    <P>
+    The position of the brush is controlled with the mouse and displayed as a vertical line with two triangle arrows (blue and red) at one end (called the 3D cursor). The brush is automatically moved to where the mouse cursor points, but not to a point on the terrain mesh but on the grid plane.
+    </P>
+    <P>
+    The shape of the brush can be selected by clicking on any of the brush shape buttons located at the top of the window. The currently selected brush is highlighted green. In grass  paint mode it is best to use simple brushes – a circle with a fuzzy edge works best in almost any situation.
+    </P>
+    <P>
+    The size of the brush can be changed with A (smaller) and D (larger) keys. Holding down the A key will make the brush smaller, holding the D key will make it larger. At all times the current size of the brush is displayed as a numerical value in the bottom left corner of the window.
+    </P>
+    <P>
+    The size of the brush can also be changed, by clicking on the config button, entering a value in the Brush Scale field and clicking the OK button.
+    </P>
+    <P>
+    The rotation of the brush can be changed using the Q and E buttons. Holding the Q button will rotate the brush anti-clockwise, and holding the E button will rotate it clockwise. At all times the rotation of the brush is displayed as a numerical value on the third icon in the bottom left corner of the window.
+    </P>
+    <P>
+    Just as the size, the rotation can be changed in the configuration dialog. The field labeled Heading is responsible for the brush rotation.
+    </P>
+    <P>
+    The strength of the brush can be controlled with W and S keys. Holding down the W key will increase the brush strength holding down the S key will decrease it. The strength of the brush is most important when you want to mix two or more grass textures. 
+    </P>
+    <DIV class="img">
+            <IMG src="img/screen14_small.png"> 
+        </DIV>
+        <H4>Blended grass textures</H4>
     </DIV>
 </BODY>
