--- a/manual/g_change.html
+++ b/manual/g_change.html
@@ -109,7 +109,14 @@
         <H1>Selecting grass textures</H1>
     </DIV> 
     <DIV id="main">    
-     <P>
+    <P>
+    In grass paint mode textures are changed in the same way as in texture paint mode - but you only have 3 textures to select.
+    </P>
+    <P>
+    The texture select buttons are located on the right side of the window. Clicking on any of the texture images sets that texture as the current one and allows to paint grass using that texture.
+    </P>
+    <P>
+    Clicking on the rotating arrows icon <IMG src="img/change.png"> will load a different texture in place of the old texture. 
      </P>
     </DIV>
 </BODY>
