--- a/manual/g_custom.html
+++ b/manual/g_custom.html
@@ -104,12 +104,16 @@
         </OL>
     </DIV>
     <DIV id="top">        
-        <A href="g_blend.html" class="left">&lt;&lt;- PREVIOUS</A>
+        <A href="g_change.html" class="left">&lt;&lt;- PREVIOUS</A>
          <A href="obj_coll_mesh.html" class="right">NEXT -&gt;&gt;</A>        
         <H1>Custom grass texture</H1>
     </DIV> 
     <DIV id="main">    
-     <P>
-     </P>
+    <P>
+    Custom textures can be added to the editor by placing them in the right directory. The grass shader only uses a diffuse texture with a transparency mask in the alpha channel.
+    </P>
+    <P>
+    You will need to place the grass textures in the <SPAN class="bold">/grass/</SPAN> folder. The editor will accept png, tga and dds textures.
+    </P>
     </DIV>
 </BODY>
