--- a/manual/h_brush.html
+++ b/manual/h_brush.html
@@ -65,7 +65,7 @@
                         <LI class="nav"><A href="obj_walls.html">Walls</A></LI>                    
                         <LI class="nav"><A href="obj_actors.html">Actors</A></LI>
                         <LI class="nav"><A href="obj_fx.html">Lights, collisions, particle</A></LI>
-                        <LI class="nav"><A href="obj_custom.html">Custom assets</A></LI>
+                        <LI class="nav"><A href="obj_pickup.html">Picking up objects</A></LI><LI class="nav"><A href="obj_custom.html">Custom assets</A></LI>
                     </UL>
             </LI> 
             <LI><LABEL class="collapse" for="_6">Paint Walkmap mode</LABEL>
