--- a/manual/obj_actors.html
+++ b/manual/obj_actors.html
@@ -65,7 +65,7 @@
                         <LI class="nav"><A href="obj_walls.html">Walls</A></LI>                    
                         <LI class="nav"><A href="obj_actors.html">&gt;Actors</A></LI>
                         <LI class="nav"><A href="obj_fx.html">Lights, collisions, particle</A></LI>
-                        <LI class="nav"><A href="obj_custom.html">Custom assets</A></LI>
+                        <LI class="nav"><A href="obj_pickup.html">Picking up objects</A></LI><LI class="nav"><A href="obj_custom.html">Custom assets</A></LI>
                     </UL>
             </LI> 
             <LI><LABEL class="collapse" for="_6">Paint Walkmap mode</LABEL>
@@ -109,7 +109,21 @@
         <H1>Animated objects (actors)</H1>
     </DIV> 
     <DIV id="main">    
-     <P>
-     </P>
+    <P>
+    In Panda3D animated meshes are called Actors, the same convention is true for the Koparka Editor. 
+    </P>
+    <P>
+    Placing Actors is identical to placing single objects, with the only difference that actors have animations, refer to the part of the manual dealing with placing single objects for more details.
+    </P>
+    <P>
+    Currently the editor will only play one idle animation in a loop, but an actor can have any number of animations and these can be played using some custom logic. It’s up to the game designers to make use of custom animations. 
+    </P>
+    <P>
+    The icon for placing actors is a simplified human silhouette:
+        <DIV class="img">
+            <IMG src="img/icon_actor.png"> 
+        </DIV>
+        <H4>Paint Actors icon</H4>
+    </P>    
     </DIV>
 </BODY>
