--- a/manual/obj_coll_mesh.html
+++ b/manual/obj_coll_mesh.html
@@ -65,7 +65,7 @@
                         <LI class="nav"><A href="obj_walls.html">Walls</A></LI>                    
                         <LI class="nav"><A href="obj_actors.html">Actors</A></LI>
                         <LI class="nav"><A href="obj_fx.html">Lights, collisions, particle</A></LI>
-                        <LI class="nav"><A href="obj_custom.html">Custom assets</A></LI>
+                        <LI class="nav"><A href="obj_pickup.html">Picking up objects</A></LI><LI class="nav"><A href="obj_custom.html">Custom assets</A></LI>
                     </UL>
             </LI> 
             <LI><LABEL class="collapse" for="_6">Paint Walkmap mode</LABEL>
@@ -109,7 +109,32 @@
         <H1>Collision Mesh</H1>
     </DIV> 
     <DIV id="main">    
-     <P>
+    <P>
+    The collision mesh is an important part of almost any (usable) map – it makes the terrain solid (tangible). In some scenarios the heightmap is enough to tell where the terrain begins, but because of the unique mesh used by the Koparka editor (non-uniform cellular triangles) there would always be some inaccuracy (and nobody likes to see an avatar floating above the terrain or walking knee deep in rock). 
+    </P>
+    <DIV class="img">
+            <IMG src="img/mesh.png"> 
+        </DIV>
+    <H4>Mesh made from non-uniform cellular triangles</H4> 
+    <P>
+    The editor uses the collision mesh to place objects on the ground, without the need to manualy adjust the height (Z coordinate) of every object (but if the height of any object needs to be adjusted it still can be). 
+    </P>
+    <DIV class="img">
+            <IMG src="img/screen3_small.png"> 
+        </DIV>
+    <H4>Entering Object mode for the first time</H4> 
+    <P>
+    When you first enter the Object Place mode, the editor will ask to generate a collision mesh. This process takes a few moments (minutes on weak hardware), but the resulting collision mesh is pre-optimized (arranged in a quad tree) and good enough to be used in production ready levels (if a better/different mesh is needed you can generate one with the use of the collisiongen.py script and optimize it with the octree.py script located in the tools folder).
+    </P>
+    <P>
+    You should generate a collision mesh when you are satisfied with the shape of your terrain. The collision mesh will not be regenerated automatically if you change the shape of the terrain. 
+    </P>
+    <P>
+    If you need to generate a new collision mesh you will need to use the Save/Load dialog and export the collision mesh – that is currently the only way  to generate a new collision mesh.   
      </P>
+     <DIV class="img">
+            <IMG src="img/screen18_small.png"> 
+        </DIV>
+    <H4>Save/Load dialog</H4> 
     </DIV>
 </BODY>
