--- a/manual/obj_custom.html
+++ b/manual/obj_custom.html
@@ -65,6 +65,7 @@
                         <LI class="nav"><A href="obj_walls.html">Walls</A></LI>                    
                         <LI class="nav"><A href="obj_actors.html">Actors</A></LI>
                         <LI class="nav"><A href="obj_fx.html">Lights, collisions, particle</A></LI>
+                        <LI class="nav"><A href="obj_pickup.html">Picking up objects</A></LI>
                         <LI class="nav"><A href="obj_custom.html">&gt;Custom assets</A></LI>
                     </UL>
             </LI> 
