--- a/manual/index.html
+++ b/manual/index.html
@@ -77,7 +77,7 @@
             <LI><LABEL class="collapse" for="_7">Map configuration</LABEL>
                 <INPUT id="_7" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="config_h2o.html">Water</A></LI>
+                        <LI class="nav"><A href="config_h2o.html">Water and Sky</A></LI>
                         <LI class="nav"><A href="config_ter.html">Terrain</A></LI>
                     </UL>
             </LI>    
@@ -112,7 +112,7 @@
         Koparka is a basic level authoring tool, created with Panda3D and meant to be used with that game engine, or in simpler words – it’s a Level Editor. 
         </P>
         <P>
-        It was initially designed as a heightmap editor, but in time it grew to be something more - a tool allowing anyone to create a complete environment (level/map/area -call it what you will), with shaders to render animated grass and foliage, a dynamic sky dome, lights, shadows, water and particle effects.   
+        It was initially designed as a heightmap editor, but in time it grew to be something more - a tool allowing anyone to create a complete environment (level/map/area -call it what you will), with shaders to render animated grass and foliage, a dynamic sky dome, lights, shadows, Water and Sky and particle effects.   
         </P>
         <P>
         Just like Panda3D, Koparka is a free tool, with sourcecode available at github with a very liberal license (The Beer-Ware License). 
