--- a/manual/config_ter.html
+++ b/manual/config_ter.html
@@ -77,7 +77,7 @@
             <LI><LABEL class="collapse" for="_7">Map configuration</LABEL>
                 <INPUT id="_7" type="checkbox" checked>
                     <UL>
-                        <LI class="nav"><A href="config_h2o.html">Water</A></LI>
+                        <LI class="nav"><A href="config_h2o.html">Water and Sky</A></LI>
                         <LI class="nav"><A href="config_ter.html">&gt;Terrain</A></LI>
                     </UL>
             </LI>    
@@ -110,6 +110,16 @@
     </DIV> 
     <DIV id="main">    
      <P>
+     The editor allows to configure terrain texture tiling and the scale of the terrain itself, these are part of the map configuration because all the terrain settings are saved with the map file. 
+    </P>
+    <H2>Terrain Tile</H2>
+    <P>    
+    This setting controls how many times all textures for the terrain are repeated. 
+    </P>
+
+    <H2>Terrain Scale</H2>
+    <P>
+    This represents the vertical scale (height) of the terrain. Higher numbers allow to sculpt with greater height differences, lower numbers allow finer control over the shape. Values below 50.0 and above 300.0 are not recommended.  
      </P>
     </DIV>
 </BODY>
