--- a/manual/obj_pickup.html
+++ b/manual/obj_pickup.html
@@ -78,7 +78,7 @@
             <LI><LABEL class="collapse" for="_7">Map configuration</LABEL>
                 <INPUT id="_7" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="config_h2o.html">Water</A></LI>
+                        <LI class="nav"><A href="config_h2o.html">Water and Sky</A></LI>
                         <LI class="nav"><A href="config_ter.html">Terrain</A></LI>
                     </UL>
             </LI>    
