--- a/manual/w_map.html
+++ b/manual/w_map.html
@@ -77,7 +77,7 @@
             <LI><LABEL class="collapse" for="_7">Map configuration</LABEL>
                 <INPUT id="_7" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="config_h2o.html">Water</A></LI>
+                        <LI class="nav"><A href="config_h2o.html">Water and Sky</A></LI>
                         <LI class="nav"><A href="config_ter.html">Terrain</A></LI>
                     </UL>
             </LI>    
@@ -109,7 +109,21 @@
         <H1>Walk map and navigation mesh</H1>
     </DIV> 
     <DIV id="main">    
-     <P>
-     </P>
+    <DIV class="img">
+            <IMG src="img/screen5_small.png"> 
+        </DIV>
+    <H4>Walkmap painting</H4>
+    <P>
+    In Walkmap mode you can mark some parts of the terrain as unwalkable. The resulting map can be useful by itself (it may be cheaper/faster to sample a pixel from an image then to run  collision detection), but the editor can generate a navigation mesh – a special graph that is needed for the PandaAI pathfinding system that ships with Panda3D. 
+    </P>
+    <P>    
+    In this mode you have two tools, represented by icons in the bottom right corner. The red icon allows to paint areas of the map that are inaccessible and the green icon allows to paint accessible areas. By default all of the map is accessible (walkable).
+    </P>
+    <P>    
+    Areas that are unwalkable are displayed with a red tint (in this mode and in object paint mode).
+    </P>
+    <P>    
+    In the Walkmap paint mode the shape of the brush is ignored, but you can still change the size of the brush (with A and D keys) and its rotation (Q and E keys). Painting is done with the left mouse button.
+    </P>
     </DIV>
 </BODY>
